--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -910,10 +910,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ddad44d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Cape Town</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2022-11-22 21:34:02</td>\n",
+       "      <td>-33.9258</td>\n",
+       "      <td>18.4232</td>\n",
+       "      <td>65.26</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ilulissat</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>2022-11-22 21:37:08</td>\n",
+       "      <td>69.2167</td>\n",
+       "      <td>-51.1000</td>\n",
+       "      <td>19.42</td>\n",
+       "      <td>93</td>\n",
+       "      <td>40</td>\n",
+       "      <td>6.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Birpur</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>2022-11-22 21:37:08</td>\n",
+       "      <td>26.5167</td>\n",
+       "      <td>87.0167</td>\n",
+       "      <td>62.58</td>\n",
+       "      <td>69</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bambous Virieux</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>2022-11-22 21:37:08</td>\n",
+       "      <td>-20.3428</td>\n",
+       "      <td>57.7575</td>\n",
+       "      <td>73.22</td>\n",
+       "      <td>88</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Hermanus</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2022-11-22 21:37:09</td>\n",
+       "      <td>-34.4187</td>\n",
+       "      <td>19.2345</td>\n",
+       "      <td>58.80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>92</td>\n",
+       "      <td>7.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>2022-11-22 21:37:09</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>78.35</td>\n",
+       "      <td>77</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>2022-11-22 21:37:09</td>\n",
+       "      <td>-53.1500</td>\n",
+       "      <td>-70.9167</td>\n",
+       "      <td>62.71</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Busselton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2022-11-22 21:37:09</td>\n",
+       "      <td>-33.6500</td>\n",
+       "      <td>115.3333</td>\n",
+       "      <td>63.41</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Uyuni</td>\n",
+       "      <td>BO</td>\n",
+       "      <td>2022-11-22 21:37:10</td>\n",
+       "      <td>-20.4597</td>\n",
+       "      <td>-66.8250</td>\n",
+       "      <td>62.74</td>\n",
+       "      <td>5</td>\n",
+       "      <td>83</td>\n",
+       "      <td>9.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Srednekolymsk</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2022-11-22 21:37:10</td>\n",
+       "      <td>67.4500</td>\n",
+       "      <td>153.6833</td>\n",
+       "      <td>-38.07</td>\n",
+       "      <td>100</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID             City Country                 Date      Lat       Lng  \\\n",
+       "0        0        Cape Town      ZA  2022-11-22 21:34:02 -33.9258   18.4232   \n",
+       "1        1        Ilulissat      GL  2022-11-22 21:37:08  69.2167  -51.1000   \n",
+       "2        2           Birpur      IN  2022-11-22 21:37:08  26.5167   87.0167   \n",
+       "3        3  Bambous Virieux      MU  2022-11-22 21:37:08 -20.3428   57.7575   \n",
+       "4        4         Hermanus      ZA  2022-11-22 21:37:09 -34.4187   19.2345   \n",
+       "5        5           Atuona      PF  2022-11-22 21:37:09  -9.8000 -139.0333   \n",
+       "6        6     Punta Arenas      CL  2022-11-22 21:37:09 -53.1500  -70.9167   \n",
+       "7        7        Busselton      AU  2022-11-22 21:37:09 -33.6500  115.3333   \n",
+       "8        8            Uyuni      BO  2022-11-22 21:37:10 -20.4597  -66.8250   \n",
+       "9        9    Srednekolymsk      RU  2022-11-22 21:37:10  67.4500  153.6833   \n",
+       "\n",
+       "   Max Temp  Humidity  Cloudiness  Wind Speed  \n",
+       "0     65.26        77           0        8.05  \n",
+       "1     19.42        93          40        6.91  \n",
+       "2     62.58        69           4        3.98  \n",
+       "3     73.22        88          20        4.61  \n",
+       "4     58.80        75          92        7.56  \n",
+       "5     78.35        77           4       15.46  \n",
+       "6     62.71        42           0       27.63  \n",
+       "7     63.41        71           2        4.68  \n",
+       "8     62.74         5          83        9.31  \n",
+       "9    -38.07       100          63        4.63  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TEMPORARY ONLY\n",
     "# File to Load\n",
@@ -926,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "db670bf3",
    "metadata": {},
    "outputs": [],
@@ -938,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "82ff0847",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1324,7 @@
        "9       100          63        4.63  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "966b89f5",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9d59eda8",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f5a39b69",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e1c89cea",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "6d359afb",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "94798f28",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "2594d73e",
    "metadata": {},
    "outputs": [],
